# irgpua

./: .gitignore  CMakeLists.txt  README.md  ncu.sh  nsight-compute.sh
images/: Broken#0.pgm  Broken#11.pgm  Broken#13.pgm  Broken#14.pgm  Broken#16.pgm  Broken#17.pgm  Broken#18.pgm  Broken#19.pgm  Broken#20.pgm  Broken#24.pgm  Broken#25.pgm  Broken#26.pgm  Broken#27.pgm  Broken#28.pgm  Broken#29.pgm  Broken#3.pgm  Broken#5.pgm  Broken#6.pgm  Broken#7.pgm  Broken#8.pgm
src/: fix_cpu.cc  fix_cpu.hh  image.hh  main.cu  main_cub.cu  main_kernel.cu  pipeline.hh
tp_reduce/: .gitignore  CMakeLists.txt  Makefile  README.md
tp_reduce/src/: to_bench.cu  to_bench.cuh
tp_scan/: .gitignore  BUILD.md  CMakeLists.txt  ncu.sh
tp_scan/bench/: main.cc  test_helpers.hxx
tp_scan/src/: to_bench.cu  to_bench.cuh
